// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rc-footer render Footer with columnLayout and backgroundColor 1`] = `
<footer
  class="rc-footer rc-footer-dark"
  style="color: red; background-color: transparent;"
>
  <section
    class="rc-footer-container"
  >
    <section
      class="rc-footer-columns"
      style="justify-content: space-between;"
    >
      <div
        class="rc-footer-column"
      >
        <h2>
          title
        </h2>
      </div>
      <div
        class="rc-footer-column"
      >
        <h2>
          title
        </h2>
      </div>
    </section>
  </section>
</footer>
`;

exports[`rc-footer render empty Footer 1`] = `
<footer
  class="rc-footer rc-footer-dark"
>
  <section
    class="rc-footer-container"
  />
</footer>
`;

exports[`rc-footer render light theme Footer 1`] = `
<footer
  class="rc-footer rc-footer-light"
  style="color: red;"
>
  <section
    class="rc-footer-container"
  >
    <section
      class="rc-footer-columns"
    >
      <div
        class="rc-footer-column"
      >
        <h2>
          title
        </h2>
      </div>
      <div
        class="rc-footer-column"
      >
        <h2>
          title
        </h2>
      </div>
    </section>
  </section>
</footer>
`;
